eval douglas with skin

--- a/src/content/generalConflictData/20231230-1.yml
+++ b/src/content/generalConflictData/20231230-1.yml
@@ -3,6 +3,7 @@ conflicts:
     - Marcus Agrippa
   other:
     - Douglas
+    - Douglas (Odyssey)
     - Charles XII
     - James Conrad
     - Princess Kaguya
