--- a/src/content/generalConflictData/ra1.yml
+++ b/src/content/generalConflictData/ra1.yml
@@ -1,6 +1,7 @@
 conflicts:
   01HES90861A1V9J8PHZE9KA32N:
     - Douglas
+    - Douglas (Odyssey)
     - Charles XII
     - James Conrad
     - Princess Kaguya
