--- a/src/content/generalConflictData/ra1a.yml
+++ b/src/content/generalConflictData/ra1a.yml
@@ -3,6 +3,7 @@ conflicts:
     - Simeon the Great
   other:
     - Douglas
+    - Douglas (Odyssey)
     - Charles XII
     - James Conrad
     - Princess Kaguya
