updated conflict data

--- a/src/content/generalConflictData/ra1a.yml
+++ b/src/content/generalConflictData/ra1a.yml
@@ -2,6 +2,7 @@ conflicts:
   01HES949ATG9BJQDA0K73VN88T: 
     - Simeon the Great
   other:
+    - Marcus Agrippa
     - Douglas
     - Douglas (Odyssey)
     - Charles XII
