what I know so far of Sweyn

--- a/src/content/generalConflictData/gr3.yml
+++ b/src/content/generalConflictData/gr3.yml
@@ -4,6 +4,8 @@ conflicts:
     - Soult
     - Epaminondas
     - Oda Nobunaga
+  other:
+    - Sweyn Forkbeard
 books:
   - name: Ground Attack Increase
     level: '1'
