two new generals

--- a/src/content/generalConflictData/ra2.yml
+++ b/src/content/generalConflictData/ra2.yml
@@ -2,6 +2,7 @@ conflicts:
   01HES969S8E146GSF5ES358GWD:
     - Elektra
     - Vladimir the Great
+    - Idunn
   other:
     - Louis IX
     - Winfield Scott
