--- a/src/content/generalConflictData/ra2b.yaml
+++ b/src/content/generalConflictData/ra2b.yaml
@@ -4,6 +4,7 @@ conflicts:
   other:
     - Elektra
     - Vladimir the Great
+    - Idunn
     - Winfield Scott
     - Louis IX
     - Prince Rhaeger
