--- a/src/content/generalConflictData/mt1.yml
+++ b/src/content/generalConflictData/mt1.yml
@@ -1,6 +1,5 @@
 conflicts:
-  01HGKX9WEA11KST53WNH9WZTYE:
-    - Roland
+  01HNP2VSPGA7AWKN10M2ABCR3G:
     - Lysander
     - Gaius Octavius
     - Bertrand du Guesclin
@@ -8,4 +7,7 @@ conflicts:
   other:
     - George A. Custer
     - Barbarossa
+    - Mordred
+    - Napoleon Prime
+    - Roland
     - Hannibal
