--- a/src/content/generalConflictData/gr2a.yml
+++ b/src/content/generalConflictData/gr2a.yml
@@ -3,10 +3,8 @@ conflicts:
     - Yue Fei
   other:
     - Ludwig
-    - Aurelian
-    - Elise
-    - Maeda Toshiie
-    - Guan Yu
+    - Lu Xun
+    - Scipio Africanus
     - Alexander the Great
     - Carus
     - Basil II
