--- a/src/content/generalConflictData/gr6.yml
+++ b/src/content/generalConflictData/gr6.yml
@@ -1,10 +1,10 @@
 conflicts:
-  01HES9RYB0QPCVF1ZGNB43KNFT:
-    - Eleanor
+  01HP34D6PR00VY31NQ79JWE4P1:
+    - Alessandra
   other:
-    - Li Shimin
-    - King Arthur
+    - Suchet
     - Genghis Khan
+    - King Arthur
 books:
   - name: March Size Increase
     level: '1'
