--- a/src/content/generalConflictData/gr1a.yml
+++ b/src/content/generalConflictData/gr1a.yml
@@ -1,11 +1,13 @@
 conflicts:
   01HFAMX07D2KBABPP6DJ14QVWM:
-    - Scipio Africanus
-  other:
-    - Ludwig
     - Aurelian
     - Elise
     - Maeda Toshiie
     - Guan Yu
+  other:
+    - Ludwig
+    - Lu Xun
+    - Scipio Africanus
     - Alexander the Great
     - Carus
+    - Yue Fei
