conflict data update

--- a/src/content/generalConflictData/mt2d.yml
+++ b/src/content/generalConflictData/mt2d.yml
@@ -2,10 +2,10 @@ conflicts:
   01HGKYREE8MCE5JWPAG4R2VX94:
     - Poligenus
   other:
+    - Napoleon Prime
     - Roland
+    - Zhao Yun
+    - Yue Fei
     - El Cid
     - Hannibal
     - Basil II
-    - Zhao Yun
-    - Napoleon Prime
-    - El Cid
