evony answers has a mistake

--- a/src/content/generalConflictData/sg3.yml
+++ b/src/content/generalConflictData/sg3.yml
@@ -7,6 +7,7 @@ conflicts:
     - Septimius Serverus
     - William Wallace
     - Khalid
+    - My Guiying
 books:
   - name: Siege Attack
     level: '1'
