--- a/src/content/generalConflictData/sg9.yml
+++ b/src/content/generalConflictData/sg9.yml
@@ -2,5 +2,6 @@ conflicts:
   01HPAKDCEXFNVRV7GB6S6WN0SS:
     - Mu Guiying
   other: 
-    - John Hunyadi
-    - Zucca
+    - Raimondo
+    - Surena
+    - Emperor Qin Shihuang
