--- a/src/content/generalConflictData/sg3a.yml
+++ b/src/content/generalConflictData/sg3a.yml
@@ -7,6 +7,7 @@ conflicts:
     - Emperor Qin Shihuang
     - William Wallace
     - Khalid
+    - Mu Guiying
 books:
   - name: Siege Attack
     level: '1'
