more tenative conflict data

--- a/src/content/generalConflictData/mt1a.yml
+++ b/src/content/generalConflictData/mt1a.yml
@@ -11,6 +11,7 @@ conflicts:
     - Hannibal
     - King Arthur
     - Genghis Khan
+    - Jayavarman II
 books:
   - name: March Size Increase
     level: '1'
