less tenative conflicts

--- a/src/content/generalConflictData/mt6.yaml
+++ b/src/content/generalConflictData/mt6.yaml
@@ -1,13 +1,3 @@
 conflicts:
   01HQMCBGK8XXZ8Y6S1Q4FS4Z06:
-    - Jayavarman II
-  other:
-    - Lysander
-    - Gaius Octavius
-    - Bertrand du Guesclin
-    - Cyrus the Great
-    - George A. Custer
-    - Barbarossa
-    - Mordred
-    - Napoleon Prime
-    - Roland
+    - Takeda Shingen
