--- a/src/content/generalConflictData/sg4a.yml
+++ b/src/content/generalConflictData/sg4a.yml
@@ -3,4 +3,36 @@ conflicts:
     - Isabella I
   other:
     - Ulysses S. Grant
-    
+books:
+  - name: March Size Increase
+    level: '1'
+    buff:
+    - attribute: March_Size_Capacity
+      condition: When_Not_Mine
+      value:
+        number: 3
+        unit: percentage
+  - name: March Size Increase
+    level: '2'
+    buff:
+    - attribute: March_Size_Capacity
+      condition: When_Not_Mine
+      value:
+        number: 6
+        unit: percentage
+  - name: March Size Increase
+    level: '3'
+    buff:
+    - attribute: March_Size_Capacity
+      condition: When_Not_Mine
+      value:
+        number: 9
+        unit: percentage
+  - name: March Size Increase
+    level: '4'
+    buff:
+    - attribute: March_Size_Capacity
+      condition: When_Not_Mine
+      value:
+        number: 12
+        unit: percentage
