with proper case

--- a/src/content/generalConflictData/ra2.yml
+++ b/src/content/generalConflictData/ra2.yml
@@ -3,6 +3,7 @@ conflicts:
     - Elektra
     - Vladimir the Great
     - Idunn
+    - Idunn (Siege)
   other:
     - Louis IX
     - Winfield Scott
