--- a/src/content/generalConflictData/ra2a.yml
+++ b/src/content/generalConflictData/ra2a.yml
@@ -5,6 +5,7 @@ conflicts:
     - Elektra
     - Vladimir the Great
     - Idunn
+    - Idunn (Siege)
     - Li Shimin
     - Louis IX
     - Prince Rhaeger
