--- a/src/content/generalConflictData/ra2b.yml
+++ b/src/content/generalConflictData/ra2b.yml
@@ -5,6 +5,7 @@ conflicts:
     - Elektra
     - Vladimir the Great
     - Idunn
+    - Idunn (Siege)
     - Winfield Scott
     - Louis IX
     - Prince Rhaeger
