--- a/src/content/generalConflictData/ra3.yml
+++ b/src/content/generalConflictData/ra3.yml
@@ -14,6 +14,7 @@ conflicts:
     - Louis IX
     - Li Shimin
     - Idunn
+    - Idunn (Siege)
 books:
 - name: Ranged Attack Increase
   level: '1'
