--- a/src/content/specialities/Dacian_Wars.yaml
+++ b/src/content/specialities/Dacian_Wars.yaml
@@ -1,7 +1,7 @@
 ---
 name: Dacian Wars
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: Attack
       class: Ground
@@ -17,7 +17,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: Attack
       class: Ground
@@ -33,7 +33,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: Attack
       class: Ground
@@ -49,7 +49,7 @@ attribute:
       value:
         number: 2
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: Attack
       class: Ground
@@ -65,7 +65,7 @@ attribute:
       value:
         number: 2
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: Attack
       class: Ground
