--- a/src/content/specialities/Harald_BlueTooth.yaml
+++ b/src/content/specialities/Harald_BlueTooth.yaml
@@ -1,7 +1,7 @@
 ---
 name: Harald BlueTooth
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: Wounded_to_Death
       condition: Enemy
@@ -13,7 +13,7 @@ attribute:
       value:
         number: -1
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: Wounded_to_Death
       condition: Enemy
@@ -25,7 +25,7 @@ attribute:
       value:
         number: -1
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: Wounded_to_Death
       condition: Enemy
@@ -37,7 +37,7 @@ attribute:
       value:
         number: -2
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: Wounded_to_Death
       condition: Enemy
@@ -49,7 +49,7 @@ attribute:
       value:
         number: -2
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: Wounded_to_Death
       condition: Enemy
