--- a/src/content/specialities/Manipulation.yaml
+++ b/src/content/specialities/Manipulation.yaml
@@ -1,35 +1,35 @@
 ---
 name: Manipulation
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: Defense
       condition: Enemy
       value:
         number: -2
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: Defense
       condition: Enemy
       value:
         number: -2
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: Defense
       condition: Enemy
       value:
         number: -3
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: Defense
       condition: Enemy
       value:
         number: -3
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: Defense
       condition: Enemy
