--- a/src/content/specialities/Prince_of_Essling.yaml
+++ b/src/content/specialities/Prince_of_Essling.yaml
@@ -1,7 +1,7 @@
 ---
 name: Prince of Essling
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: Attack
       class: Mounted
@@ -13,7 +13,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: Attack
       class: Mounted
@@ -25,7 +25,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: Attack
       class: Mounted
@@ -37,7 +37,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: Attack
       class: Mounted
@@ -49,7 +49,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: Attack
       class: Mounted
