--- a/src/content/specialities/Ranged_Troop_Ares.yaml
+++ b/src/content/specialities/Ranged_Troop_Ares.yaml
@@ -1,7 +1,7 @@
 ---
 name: Ranged Troop Ares
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: Attack
       class: Archers
@@ -18,7 +18,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: Attack
       class: Archers
@@ -35,7 +35,7 @@ attribute:
       value:
         number: 1
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: Attack
       class: Archers
@@ -52,7 +52,7 @@ attribute:
       value:
         number: 2
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: Attack
       class: Archers
@@ -69,7 +69,7 @@ attribute:
       value:
         number: 2
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: Attack
       class: Archers
