--- a/src/content/specialities/Ruler.yaml
+++ b/src/content/specialities/Ruler.yaml
@@ -1,35 +1,35 @@
 ---
 name: Ruler
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: SubCity_Troop_Capacity
       condition: When_City_Mayor_for_this_SubCity
       value:
         number: 4
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: SubCity_Troop_Capacity
       condition: When_City_Mayor_for_this_SubCity
       value:
         number: 4
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: SubCity_Troop_Capacity
       condition: When_City_Mayor_for_this_SubCity
       value:
         number: 7
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: SubCity_Troop_Capacity
       condition: When_City_Mayor_for_this_SubCity
       value:
         number: 7
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: SubCity_Troop_Capacity
       condition: When_City_Mayor_for_this_SubCity
