--- a/src/content/specialities/Wild_Hunt_Valkyrie.yaml
+++ b/src/content/specialities/Wild_Hunt_Valkyrie.yaml
@@ -1,7 +1,7 @@
 ---
 name: Wild Hunt Valkyrie
 attribute:
-  - level: 'Green'
+  - level: Green
     buff:
     - attribute: Attack
       class: Ground
@@ -13,7 +13,7 @@ attribute:
       value:
         number: 3
         unit: percentage
-  - level: 'Blue'
+  - level: Blue
     buff:
     - attribute: Attack
       class: Ground
@@ -25,7 +25,7 @@ attribute:
       value:
         number: 3
         unit: percentage
-  - level: 'Purple'
+  - level: Purple
     buff:
     - attribute: Attack
       class: Ground
@@ -37,7 +37,7 @@ attribute:
       value:
         number: 6
         unit: percentage
-  - level: 'Orange'
+  - level: Orange
     buff:
     - attribute: Attack
       class: Ground
@@ -49,7 +49,7 @@ attribute:
       value:
         number: 6
         unit: percentage
-  - level: 'Gold'
+  - level: Gold
     buff:
     - attribute: Attack
       class: Ground
