--- a/src/content/specialities/Mounted Troop Assault.yaml
+++ b/src/content/specialities/Mounted Troop Assault.yaml
@@ -1,63 +1,63 @@
 ---
-- name: Mounted Troop Assault
-  attribute:
-    - level: Green
-      buff:
-        - attribute: Attack
-          class: Mounted
-          value:
-            number: 1
-            unit: percentage
-        - attribute: HP
-          class: Mounted
-          value:
-            number: 1
-            unit: percentage
-    - level: Blue
-      buff:
-        - attribute: Attack
-          class: Mounted
-          value:
-            number: 1
-            unit: percentage
-        - attribute: HP
-          class: Mounted
-          value:
-            number: 1
-            unit: percentage
-    - level: Purple
-      buff:
-        - attribute: Attack
-          class: Mounted
-          value:
-            number: 2
-            unit: percentage
-        - attribute: HP
-          class: Mounted
-          value:
-            number: 2
-            unit: percentage
-    - level: Orange
-      buff:
-        - attribute: Attack
-          class: Mounted
-          value:
-            number: 2
-            unit: percentage
-        - attribute: HP
-          class: Mounted
-          value:
-            number: 2
-            unit: percentage
-    - level: Gold
-      buff:
-        - attribute: Attack
-          class: Mounted
-          value:
-            number: 4
-            unit: percentage
-        - attribute: HP
-          class: Mounted
-          value:
-            number: 4
-            unit: percentage
+name: Mounted Troop Assault
+attribute:
+  - level: Green
+    buff:
+      - attribute: Attack
+        class: Mounted
+        value:
+          number: 1
+          unit: percentage
+      - attribute: HP
+        class: Mounted
+        value:
+          number: 1
+          unit: percentage
+  - level: Blue
+    buff:
+      - attribute: Attack
+        class: Mounted
+        value:
+          number: 1
+          unit: percentage
+      - attribute: HP
+        class: Mounted
+        value:
+          number: 1
+          unit: percentage
+  - level: Purple
+    buff:
+      - attribute: Attack
+        class: Mounted
+        value:
+          number: 2
+          unit: percentage
+      - attribute: HP
+        class: Mounted
+        value:
+          number: 2
+          unit: percentage
+  - level: Orange
+    buff:
+      - attribute: Attack
+        class: Mounted
+        value:
+          number: 2
+          unit: percentage
+      - attribute: HP
+        class: Mounted
+        value:
+          number: 2
+          unit: percentage
+  - level: Gold
+    buff:
+      - attribute: Attack
+        class: Mounted
+        value:
+          number: 4
+          unit: percentage
+      - attribute: HP
+        class: Mounted
+        value:
+          number: 4
+          unit: percentage
