--- a/src/content/specialities/Lord of the Mercians.yaml
+++ b/src/content/specialities/Lord of the Mercians.yaml
@@ -5,25 +5,25 @@ attribute:
     buff:
       - attribute: Attack
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
       - attribute: Attack
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
       - attribute: Defense
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
       - attribute: Defense
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
@@ -31,25 +31,25 @@ attribute:
     buff:
       - attribute: Attack
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
       - attribute: Attack
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
       - attribute: Defense
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
       - attribute: Defense
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 3
           unit: percentage
@@ -57,25 +57,25 @@ attribute:
     buff:
       - attribute: Attack
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
       - attribute: Attack
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
       - attribute: Defense
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
       - attribute: Defense
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
@@ -83,25 +83,25 @@ attribute:
     buff:
       - attribute: Attack
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
       - attribute: Attack
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
       - attribute: Defense
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
       - attribute: Defense
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 6
           unit: percentage
@@ -109,25 +109,25 @@ attribute:
     buff:
       - attribute: Attack
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 12
           unit: percentage
       - attribute: Attack
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 12
           unit: percentage
       - attribute: Defense
         class: Mounted
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 12
           unit: percentage
       - attribute: Defense
         class: Ground
-        condition: Against_Monsters
+        condition: Against Monsters
         value:
           number: 12
           unit: percentage
