--- a/src/content/generals/Maria_Theresa.yaml
+++ b/src/content/generals/Maria_Theresa.yaml
@@ -17,25 +17,25 @@ general:
     - name: Queen of Hungary
       buff:
         - attribute: Attack
-          condition: Against_Monsters
+          condition: Against Monsters
           class: Mounted
           value:
             number: 45
             unit: percentage
         - attribute: Defense
-          condition: Against_Monsters
+          condition: Against Monsters
           class: Mounted
           value:
             number: 45
             unit: percentage
         - attribute: HP
-          condition: Against_Monsters
+          condition: Against Monsters
           class: Mounted
           value:
             number: 45
             unit: percentage
         - attribute: Stamina_cost
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: -20
             unit: percentage
@@ -43,12 +43,12 @@ general:
     - level: '6'
       buff:
         - attribute: Double_Items_Drop_Rate
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: 10
             unit: percentage
         - attribute: Marching_Speed_to_Monsters
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: 5
             unit: percentage
@@ -60,7 +60,7 @@ general:
             number: -10
             unit: percentage
         - attribute: Marching_Speed_to_Monsters
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: 10
             unit: percentage
@@ -71,14 +71,14 @@ general:
             number: 10
             unit: percentage
         - attribute: Stamina_cost
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: -5
             unit: percentage
     - level: '9'
       buff:
         - attribute: Attack
-          condition: Against_Monsters
+          condition: Against Monsters
           class: Mounted
           value:
             number: 30
@@ -86,12 +86,12 @@ general:
     - level: '10'
       buff:
         - attribute: Double_Items_Drop_Rate
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: 10
             unit: percentage
         - attribute: Stamina_cost
-          condition: Against_Monsters
+          condition: Against Monsters
           value:
             number: -5
             unit: percentage
