--- a/src/content/generals/Frigg.yaml
+++ b/src/content/generals/Frigg.yaml
@@ -14,23 +14,7 @@ general:
   level: '1'
   score_as: Ground
   books:
-    - name: Prophecy Key
-      buff:
-        - attribute: Attack
-          class: Ground
-          value:
-            number: 45
-            unit: percentage
-        - attribute: Defense
-          class: Ground
-          value:
-            number: 35
-            unit: percentage
-        - attribute: HP
-          class: Ground
-          value:
-            number: 35
-            unit: percentage
+    - Prophecy Key
   ascending:
         - level: '6'
           buff:
@@ -102,301 +86,8 @@ general:
               number: 5
               unit: percentage
   specialities:
-    - name: Ground Troop Assault
-      attribute:
-        - level: 'Green'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Blue'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Purple'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Orange'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Gold'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-    - name: Snipe
-      attribute:
-        - level: 'Green'
-          buff:
-          - attribute: Attack
-            condition: Enemy
-            value:
-              number: -1
-              unit: percentage
-        - level: 'Blue'
-          buff:
-          - attribute: Attack
-            condition: Enemy
-            value:
-              number: -1
-              unit: percentage
-        - level: 'Purple'
-          buff:
-          - attribute: Attack
-            condition: Enemy
-            value:
-              number: -2
-              unit: percentage
-        - level: 'Orange'
-          buff:
-          - attribute: Attack
-            condition: Enemy
-            value:
-              number: -2
-              unit: percentage
-        - level: 'Gold'
-          buff:
-          - attribute: Attack
-            condition: Enemy
-            value:
-              number: -4
-              unit: percentage
-    - name: Ground Troop Ares
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-    - name: Queen of the Gods
-      attribute:
-        - level: 'Green'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-        - level: 'Blue'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-        - level: 'Purple'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 8
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 8
-              unit: percentage
-        - level: 'Orange'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 8
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 8
-              unit: percentage
-        - level: 'Gold'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 8
-              unit: percentage
-          - attribute: Attack
-            class: Mounted
-            value:
-              number: 8
-              unit: percentage
-          - attribute: Defense
-            class: Ground
-            value:
-              number: 16
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 16
-              unit: percentage
+    - Ground Troop Assault
+    - Snipe
+    - Ground Troop Ares
+    - Queen of the Gods
+      
