two generals with extra outfits I was not accounting for

--- a/src/content/generalConflictData/mt3.yml
+++ b/src/content/generalConflictData/mt3.yml
@@ -4,6 +4,7 @@ conflicts:
     - Laudon
     - Prince Eugene
     - Martinus
+    - Martinus (Dragon God)
     - Li Jing
     - Washington
     - Robert Guiscard
