--- a/src/content/generalConflictData/sg3.yml
+++ b/src/content/generalConflictData/sg3.yml
@@ -2,6 +2,7 @@ conflicts:
   01HHE55GYM266T9M3AN0VFSFZN:
     - Mu Guiying
     - Raimondo
+    - Raimondo (Odyssey)
     - Surena
     - Emperor Qin Shihuang
   other:
