--- a/src/content/generalConflictData/sg3a.yml
+++ b/src/content/generalConflictData/sg3a.yml
@@ -4,6 +4,7 @@ conflicts:
   other:
     - Surena
     - Raimondo
+    - Raimondo (Odyssey)
     - Emperor Qin Shihuang
     - William Wallace
     - Khalid
