--- a/src/content/generalConflictData/sg3b.yml
+++ b/src/content/generalConflictData/sg3b.yml
@@ -4,6 +4,7 @@ conflicts:
     - Khalid
   other:
     - Raimondo
+    - Raimondo (Odyssey)
     - Surena
     - Mu Guiying
     - Emperor Qin Shihuang
