--- a/src/content/generalConflictData/mt3a.yml
+++ b/src/content/generalConflictData/mt3a.yml
@@ -5,6 +5,7 @@ conflicts:
     - Laudon
     - Prince Eugene
     - Martinus
+    - Martinus (Dragon God)
     - Li Jing
     - Robert Guiscard
     - Washington
