more work on extra skins

--- a/src/content/generalConflictData/ra2.yml
+++ b/src/content/generalConflictData/ra2.yml
@@ -1,6 +1,7 @@
 conflicts:
   01HES969S8E146GSF5ES358GWD:
     - Elektra
+    - Elektra (Dragon God)
     - Vladimir the Great
     - Idunn
     - Idunn (Siege)
