--- a/src/content/generalConflictData/ra3.yml
+++ b/src/content/generalConflictData/ra3.yml
@@ -9,6 +9,7 @@ conflicts:
     - Antara
   other:
     - Elektra
+    - Elektra (Dragon God)
     - Vladimir the Great
     - Winfield Scott
     - Louis IX
