--- a/src/content/generalConflictData/ra2b.yml
+++ b/src/content/generalConflictData/ra2b.yml
@@ -3,6 +3,7 @@ conflicts:
     - Li Shimin
   other:
     - Elektra
+    - Elektra (Dragon God)
     - Vladimir the Great
     - Idunn
     - Idunn (Siege)
