--- a/src/content/generals/Alexander_the_Great.yaml
+++ b/src/content/generals/Alexander_the_Great.yaml
@@ -14,353 +14,12 @@ general:
   level: '1'
   score_as: Ground
   books:
-    - name: Conquest
-      buff:
-        - attribute: Attack
-          condition: leading_the_army_to_attack
-          class: Ground
-          value:
-            number: 20
-            unit: percentage
-        - attribute: Rally_Capacity
-          condition: When_Rallying
-          value:
-            number: 15
-            unit: percentage
+    - Conquest
   specialities:
-    - name: Ground Troop Assault
-      attribute:
-        - level: 'Green'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Blue'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-        - level: 'Purple'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Orange'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Gold'
-          buff:
-          - attribute: Attack
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-          - attribute: HP
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-    - name: Annihilation
-      attribute:
-      - level: Green
-        buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-      - level: Blue
-        buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 1
-              unit: percentage
-      - level: Purple
-        buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-      - level: Orange
-        buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-      - level: Gold
-        buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-    - name: Ground Troop Ares
-      attribute:
-        - level: Green
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-        - level: Blue
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 1
-                unit: percentage
-        - level: Purple
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-        - level: Orange
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 2
-                unit: percentage
-        - level: Gold
-          buff:
-            - attribute: Attack
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-            - attribute: HP
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-            - attribute: Defense
-              class: Ground
-              value:
-                number: 4
-                unit: percentage
-    - name: Battle of Gaugamela
-      attribute:
-        - level: 'Green'
-          buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Blue'
-          buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 1
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 2
-              unit: percentage
-        - level: 'Purple'
-          buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-        - level: 'Orange'
-          buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 2
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 4
-              unit: percentage
-        - level: 'Gold'
-          buff:
-          - attribute: March_Size_Capacity
-            value:
-              number: 4
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Mounted
-            value:
-              number: 8
-              unit: percentage
-          - attribute: Attack
-            condition: Attacking
-            class: Ground
-            value:
-              number: 8
-              unit: percentage
+    - Ground Troop Assault
+    - Annihilation
+    - Ground Troop Ares
+    - Battle of Gaugamela
   ascending:
         - level: '6'
           buff:
