--- a/src/content/generals/Gunther.yaml
+++ b/src/content/generals/Gunther.yaml
@@ -16,6 +16,9 @@ general:
   books:
     - The King of Atlis
   specialities:
+    - Siege Machine Formation
+    - Bash
+    - Siege Machine Ares
     - Rhine Flame Axe
   ascending:
     - level: '6'
